--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -1,1 +1,26 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Dashboard</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
+</head>
+<body>
+    <div id="header">
+        <div id="title">Force Bee w/ U</div>
+    </div>
+
+    <div id="main">
+        <div id="sponsor">
+            <a href="user.html?type=sponsor"><img src="img/sponsor" alt="Sponsor access"></a>
+        </div>
+        <div id="manager">
+            <a href="user.html?type=manager"><img src="img/manager" alt="Manager access"></a>
+        </div>
+    </div>
+
+    <script src="js/index.js" type="text/javascript"></script>
+</body>
+</html>
