--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -13,11 +13,8 @@
     </div>
 
     <div id="main">
-        <div id="sponsor">
-            <a href="user.html?type=sponsor"><img src="img/sponsor" alt="Sponsor access"></a>
-        </div>
-        <div id="manager">
-            <a href="user.html?type=manager"><img src="img/manager" alt="Manager access"></a>
+        <div id="login">
+            <a href="user.html?userid=1"><img src="img/login" alt="Login"></a>
         </div>
     </div>
 
