Added hives.js info

--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -14,7 +14,7 @@
 
     <div id="main">
         <div id="login">
-            <a href="user.html?userid=1"><img src="img/login" alt="Login"></a>
+            <a href="user.html?id=1"><img src="img/login" alt="Login"></a>
         </div>
     </div>
 
