--- a/nodeServer/static/hives.html
+++ b/nodeServer/static/hives.html
@@ -49,29 +49,58 @@
 
     <div id="data_table">
         <div id="table_title">Inspections</div>
-        <table id="data">
-            <tr id="table_title_row" class="data_row">
-                <th>Number</th>
-                <th>Location</th>
-                <th>Date of installation</th>
-                <th>Type</th>
-                <th>Sun Exposure</th>
-            </tr>
-            <tr class="data_row">
-                <td>1</td>
-                <td>X.XXXX, X.xxxx</td>
-                <td>05/07/2015</td>
-                <td>Top bar</td>
-                <td>Shady</td>
-            </tr>
-            <tr class="data_row">
-                <td>2</td>
-                <td>X.XXXX, X.xxxx</td>
-                <td>20/07/2015</td>
-                <td>Langstroth</td>
-                <td>Shady</td>
-            </tr>
-        </table>
+        <div id="inspections">
+            <table id="inspection_data">
+                <tr class="data_row">
+                    <th>Number</th>
+                    <th>Location</th>
+                    <th>Date of installation</th>
+                    <th>Type</th>
+                    <th>Sun Exposure</th>
+                </tr>
+                <tr class="data_row">
+                    <td>1</td>
+                    <td>X.XXXX, X.xxxx</td>
+                    <td>05/07/2015</td>
+                    <td>Top bar</td>
+                    <td>Shady</td>
+                </tr>
+                <tr class="data_row">
+                    <td>2</td>
+                    <td>X.XXXX, X.xxxx</td>
+                    <td>20/07/2015</td>
+                    <td>Langstroth</td>
+                    <td>Shady</td>
+                </tr>
+            </table>
+        </div>
+
+        <div id="harvests">
+            <table id="harvest_data">
+                <tr class="data_row">
+                    <th>Number</th>
+                    <th>Location</th>
+                    <th>Date of installation</th>
+                    <th>Type</th>
+                    <th>Sun Exposure</th>
+                </tr>
+                <tr class="data_row">
+                    <td>1</td>
+                    <td>X.XXXX, X.xxxx</td>
+                    <td>05/07/2015</td>
+                    <td>Top bar</td>
+                    <td>Shady</td>
+                </tr>
+                <tr class="data_row">
+                    <td>2</td>
+                    <td>X.XXXX, X.xxxx</td>
+                    <td>20/07/2015</td>
+                    <td>Langstroth</td>
+                    <td>Shady</td>
+                </tr>
+            </table>
+        </div>
+
     </div>
 </div>
 
