Fixed a few minor bugs

--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -57,7 +57,7 @@
                     <th>Sun Exposure</th>
                 </tr>
                 <tr class="data_row">
-                    <td><a href="hives.html">1</a></td>
+                    <td><a href="hive.html">1</a></td>
                     <td>X.XXXX, X.xxxx</td>
                     <td>05/07/2015</td>
                     <td>Top bar</td>
