Changed button and fixed minor bugs

--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -42,9 +42,7 @@
             </table>
         </div>
 
-        <div id="print">
-            <a href=""><img src="img/print.png" alt="Print"/></a>
-        </div>
+        <button id="print">Print</button>
 
         <div id="data_table">
             <div id="table_title">Hives</div>
