--- a/nodeServer/static/user.html
+++ b/nodeServer/static/user.html
@@ -31,9 +31,7 @@
             </table>
         </div>
 
-        <div id="print">
-            <a href=""><img src="img/print.png" alt="Print"/></a>
-        </div>
+        <button id="print">Print</button>
 
         <div id="data_table">
             <div id="table_title">Apiaries</div>
