--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -13,9 +13,7 @@
     </div>
 
     <div id="main">
-        <div id="login">
-            <a href="user.html?id=1"><img src="img/login" alt="Login"></a>
-        </div>
+        <button id="login">Login</button>
     </div>
 
     <script src="js/index.js" type="text/javascript"></script>
