Testing hive, apiary and user

--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -13,63 +13,11 @@
     </div>
 
     <div id="main">
-        <div id="info_table">
-            <table id="info">
-                <tr class="info_row">
-                    <td>Name</td>
-                    <td>Apiary 1</td>
-                </tr>
-                <tr class="info_row">
-                    <td>GPS Location</td>
-                    <td>X.XXXX, x.xxxx</td>
-                </tr>
-                <tr class="info_row">
-                    <td>Year of commencing apiary</td>
-                    <td>0000</td>
-                </tr>
-                <tr class="info_row">
-                    <td>Harvesting months</td>
-                    <td>April, October</td>
-                </tr>
-                <tr>
-                    <td>Environment</td>
-                    <td>[Deal with all info]</td>
-                </tr>
-                <tr class="info_row">
-                    <td>Accessibility</td>
-                    <td>vehicles, motorcycle</td>
-                </tr>
-            </table>
-        </div>
+        <div id="info_table"></div>
 
         <button id="print">Print</button>
 
-        <div id="data_table">
-            <div id="table_title">Hives</div>
-            <table id="data">
-                <tr id="table_title_row" class="data_row">
-                    <th>Number</th>
-                    <th>Location</th>
-                    <th>Date of installation</th>
-                    <th>Type</th>
-                    <th>Sun Exposure</th>
-                </tr>
-                <tr class="data_row">
-                    <td><a href="hive.html">1</a></td>
-                    <td>X.XXXX, X.xxxx</td>
-                    <td>05/07/2015</td>
-                    <td>Top bar</td>
-                    <td>Shady</td>
-                </tr>
-                <tr class="data_row">
-                    <td>2</td>
-                    <td>X.XXXX, X.xxxx</td>
-                    <td>20/07/2015</td>
-                    <td>Langstroth</td>
-                    <td>Shady</td>
-                </tr>
-            </table>
-        </div>
+        <div id="data_table"></div>
     </div>
 
     <script src="js/apiary.js" type="text/javascript"></script>
