--- a/nodeServer/static/hive.html
+++ b/nodeServer/static/hive.html
@@ -13,92 +13,14 @@
 </div>
 
 <div id="main">
-    <div id="info_table">
-        <img src="" alt="Image of hive" />
-        <table id="info">
-            <tr class="info_row">
-                <td>Apiary name</td>
-                <td><a href="apiary.html">Apiary 1</a></td>
-            </tr>
-            <tr class="info_row">
-                <td>Number</td>
-                <td>10</td>
-            </tr>
-            <tr class="info_row">
-                <td>GPS location</td>
-                <td>X.XXXX, x.xxxx</td>
-            </tr>
-            <tr class="info_row">
-                <td>Date of installation</td>
-                <td>20/07/2015</td>
-            </tr>
-            <tr>
-                <td>Environment</td>
-                <td>[Deal with all info]</td>
-            </tr>
-            <tr class="info_row">
-                <td>Accessibility</td>
-                <td>vehicles, motorcycle</td>
-            </tr>
-        </table>
-    </div>
+    <div id="info_table"></div>
 
     <button id="print">Print</button>
 
     <div id="data_table">
         <div id="table_title">Inspections</div>
-        <div id="inspections">
-            <table id="inspection_data">
-                <tr class="data_row">
-                    <th>Number</th>
-                    <th>Location</th>
-                    <th>Date of installation</th>
-                    <th>Type</th>
-                    <th>Sun Exposure</th>
-                </tr>
-                <tr class="data_row">
-                    <td>1</td>
-                    <td>X.XXXX, X.xxxx</td>
-                    <td>05/07/2015</td>
-                    <td>Top bar</td>
-                    <td>Shady</td>
-                </tr>
-                <tr class="data_row">
-                    <td>2</td>
-                    <td>X.XXXX, X.xxxx</td>
-                    <td>20/07/2015</td>
-                    <td>Langstroth</td>
-                    <td>Shady</td>
-                </tr>
-            </table>
-        </div>
-
-        <div id="harvests">
-            <table id="harvest_data">
-                <tr class="data_row">
-                    <th>Number</th>
-                    <th>Location</th>
-                    <th>Date of installation</th>
-                    <th>Type</th>
-                    <th>Sun Exposure</th>
-                </tr>
-                <tr class="data_row">
-                    <td>1</td>
-                    <td>X.XXXX, X.xxxx</td>
-                    <td>05/07/2015</td>
-                    <td>Top bar</td>
-                    <td>Shady</td>
-                </tr>
-                <tr class="data_row">
-                    <td>2</td>
-                    <td>X.XXXX, X.xxxx</td>
-                    <td>20/07/2015</td>
-                    <td>Langstroth</td>
-                    <td>Shady</td>
-                </tr>
-            </table>
-        </div>
-
+        <div id="inspections"></div>
+        <div id="harvests"></div>
     </div>
 </div>
 
