--- a/nodeServer/static/user.html
+++ b/nodeServer/static/user.html
@@ -14,48 +14,11 @@
     </div>
 
     <div id="main">
-        <div id="info_table">
-            <table id="info">
-                <tr class="info_row">
-                    <td>E-mail</td>
-                    <td>example@example.com</td>
-                </tr>
-                <tr class="info_row">
-                    <td>Phone</td>
-                    <td>000000000000</td>
-                </tr>
-                <tr class="info_row">
-                    <td>[Sponsor/Manager] since</td>
-                    <td>0000</td>
-                </tr>
-            </table>
-        </div>
+        <div id="info_table"></div>
 
         <button id="print">Print</button>
 
-        <div id="data_table">
-            <div id="table_title">Apiaries</div>
-            <table id="data">
-                <tr id="table_title_row" class="data_row">
-                    <th>Name</th>
-                    <th>Location</th>
-                    <th>No of hives</th>
-                    <th>No of sponsors</th>
-                </tr>
-                <tr class="data_row">
-                    <td><a href="apiary.html">Apiary 1</a></td>
-                    <td>X.XXXX, X.xxxx</td>
-                    <td>24</td>
-                    <td>1</td>
-                </tr>
-                <tr class="data_row">
-                    <td>Apiary 2</td>
-                    <td>X.XXXX, X.xxxx</td>
-                    <td>4</td>
-                    <td>5</td>
-                </tr>
-            </table>
-        </div>
+        <div id="data_table"></div>
     </div>
 
     <script type="text/javascript" src="js/user.js"></script>
