--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Dashboard - Apiary overview</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/apiary.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/npm.js"></script>
 </head>
 <body>
-    <div id="header">
+<div class="container">
+<div id="header">
         <div id="title">Force Bee w/ U</div>
     </div>
 
@@ -20,6 +22,7 @@
 
         <div id="data_table"></div>
     </div>
+</div>
 
     <script src="js/apiary.js" type="text/javascript"></script>
 
