--- a/nodeServer/static/hive.html
+++ b/nodeServer/static/hive.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Dashboard - Apiary overview</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/apiary.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/npm.js"></script>
 </head>
 <body>
+<div class="container">
 <div id="header">
     <div id="title">Force Bee w/ U</div>
 </div>
@@ -22,6 +24,7 @@
         <div id="inspections"></div>
         <div id="harvests"></div>
     </div>
+</div>
 </div>
 
 <script src="js/hive.js" type="text/javascript"></script>
