Hopefully inspection works now

--- a/nodeServer/static/inspection.html
+++ b/nodeServer/static/inspection.html
@@ -11,69 +11,17 @@
 </head>
 <body>
 <div class="container">
-<div id="header">
-    <h1>Force Bee w/ U</h1>
-</div>
-
-<div id="main">
-    <div id="info_table">
-        <table id="info" class="table">
-            <tr class="info_row">
-                <td>Name</td>
-                <td>Apiary 1</td>
-            </tr>
-            <tr class="info_row">
-                <td>Date</td>
-                <td>21/07/2015</td>
-            </tr>
-            <tr class="info_row">
-                <td>Weather conditions</td>
-                <td>Sunny</td>
-            </tr>
-            <tr class="info_row">
-                <td>Harvesting months</td>
-                <td>April, October</td>
-            </tr>
-            <tr>
-                <td>Environment</td>
-                <td>[Deal with all info]</td>
-            </tr>
-            <tr class="info_row">
-                <td>Accessibility</td>
-                <td>vehicles, motorcycle</td>
-            </tr>
-        </table>
+    <div id="header">
+        <h1>Force Bee w/ U</h1>
     </div>
 
-    <button id="print">Print</button>
+    <div id="main">
+        <div id="info_table"></div>
 
-    <div id="data_table">
-        <h2 id="table_title">Hives</h2>
-        <table id="data" class="table">
-            <tr id="table_title_row" class="data_row">
-                <th>Number</th>
-                <th>Location</th>
-                <th>Date of installation</th>
-                <th>Type</th>
-                <th>Sun Exposure</th>
-            </tr>
-            <tr class="data_row">
-                <td>1</td>
-                <td>X.XXXX, X.xxxx</td>
-                <td>05/07/2015</td>
-                <td>Top bar</td>
-                <td>Shady</td>
-            </tr>
-            <tr class="data_row">
-                <td>2</td>
-                <td>X.XXXX, X.xxxx</td>
-                <td>20/07/2015</td>
-                <td>Langstroth</td>
-                <td>Shady</td>
-            </tr>
-        </table>
+        <button id="print">Print</button>
+
+        <div id="data_table"></div>
     </div>
-</div>
 </div>
 
 <script type="text/javascript" src="js/inspection.js"></script>
