--- a/nodeServer/static/hive.html
+++ b/nodeServer/static/hive.html
@@ -12,7 +12,7 @@
 <body>
 <div class="container">
 <div id="header">
-    <div id="title">Force Bee w/ U</div>
+    <h1 id="title">Force Bee w/ U</h1>
 </div>
 
 <div id="main">
