--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -11,8 +11,9 @@
 </head>
 <body>
 <div class="container">
-<div id="header">
+    <div id="header">
         <h1 id="title">Force Bee w/ U</h1>
+        <h2>Apiary</h2>
     </div>
 
     <div id="main">
