--- a/nodeServer/static/user.html
+++ b/nodeServer/static/user.html
@@ -13,6 +13,7 @@
 <div class="container">
     <div id="header">
         <h1 id="title">Force Bee w/ U</h1>
+        <h2>User</h2>
     </div>
 
     <div id="main">
