Added more bootstrap features

--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -19,7 +19,7 @@
     <div id="main">
         <div id="info_table"></div>
 
-        <button id="print">Print</button>
+        <button id="print" type="button" class="btn btn-info">Print</button>
 
         <div id="data_table"></div>
     </div>
