--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
 <div class="container">
-<div id="header">
+    <div id="header">
         <h1 id="title">Force Bee w/ U</h1>
     </div>
 
     <div id="main">
-        <button id="login">Login</button>
+        <h2>Welcome</h2>
+        <p>To manage your bees or sponsored hives please login.</p>
+        <button id="login" type="button" class="btn btn-primary">Login</button>
     </div>
 </div>
 
