--- a/nodeServer/static/harvest.html
+++ b/nodeServer/static/harvest.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Dashboard - Hive overview</title>
+    <title>Dashboard - Harvest overview</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -11,24 +11,18 @@
 </head>
 <body>
 <div class="container">
-<div id="header">
-    <h1 id="title">Force Bee w/ U</h1>
-    <h2>Hive</h2>
-</div>
+    <div id="header">
+        <h1 id="title">Force Bee w/ U</h1>
+        <h2>Harvest</h2>
+    </div>
 
-<div id="main">
-    <div id="info_table"></div>
-
-    <button id="print" type="button" class="btn btn-info">Print</button>
-
-    <div id="data_table">
-        <div id="inspections"></div>
-        <div id="harvests"></div>
+    <div id="main">
+        <div id="info_table"></div>
+        <button id="print" type="button" class="btn btn-info">Print</button>
     </div>
 </div>
-</div>
 
-<script src="js/hive.js" type="text/javascript"></script>
+<script src="js/harvest.js" type="text/javascript"></script>
 
 </body>
 </html>
