--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -18,7 +18,7 @@
     <div id="main">
         <h2>Welcome</h2>
         <p>To manage your bees or sponsored hives please login.</p>
-        <button id="login" type="button" class="btn btn-primary">Login</button>
+        <button href="/login.html"id="login" type="button" class="btn btn-primary">Login</button>
     </div>
 </div>
 
