--- a/nodeServer/static/login.html
+++ b/nodeServer/static/login.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
   <meta charset="UTF-8">
-  <title>Dashboard</title>
+  <title>Dashboard login</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
@@ -24,7 +24,7 @@
         <div>
           <label>Username:</label>
           <input type="text" name="username" />
-        </div>
+    </div>
         <div>
           <label>Password:</label>
           <input type="password" name="password" />
