--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <script type="text/javascript" src="js/l10n.js"></script>
+    <script type="text/javascript" src="js/localizations.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/npm.js"></script>
 </head>
