[MAP] updated css

--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" type="text/css" href="http://esri.github.io/bootstrap-map-js/src/css/bootstrapmap.css">   
     <style type="text/css">
       #mapDiv {
-        min-height: 100px; 
-        max-height: 1000px; 
+        height: 100%; 
+        width: 100%; 
       }
     </style>
 
