--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -46,7 +46,7 @@
           function(Map, BootstrapMap) {
             // Get a reference to the ArcGIS Map class
             var map = BootstrapMap.create("mapDiv",{
-              basemap:"dark-grey",
+              basemap:"dark-gray",
               center:[-122.45,37.77],
               zoom:12
             });
