--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="http://esri.github.io/bootstrap-map-js/src/css/bootstrapmap.css">   
     <style type="text/css">
       #mapDiv {
-        height: 100%; 
+        max-height: 100%; 
         width: auto; 
       }
     </style>
