--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -25,12 +25,10 @@
   <body>
     
 
-    <!-- Step 2. Add HTML to define the layout of the page and the map -->
-    <div class="container">
+    <div class="container" width="100%" height= "100%">
       <div id="mapDiv"></div>
     </div>
     
-    <!-- Step 3. Add JS to load the responsive map -->
     <script type="text/javascript">
         var package_path = "//esri.github.com/bootstrap-map-js/src/js";
         var dojoConfig = {
