--- a/nodeServer/static/hive.html
+++ b/nodeServer/static/hive.html
@@ -13,21 +13,26 @@
 </head>
 <body>
 <div class="container">
-<div id="header">
-    <h1 id="title">Force Bee w/ U</h1>
-    <h2>Hive</h2>
-</div>
-
-<div id="main">
-    <div id="info_table"></div>
-
-    <button id="print" type="button" class="btn btn-info">Print</button>
-
-    <div id="data_table">
-        <div id="inspections"></div>
-        <div id="harvests"></div>
+    <div id="header">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Force Bee w/ U</a>
+                </div>
+            </div>
+        </nav>
     </div>
-</div>
+
+    <div id="main">
+        <div id="info_table"></div>
+
+        <button id="print" type="button" class="btn btn-info">Print</button>
+
+        <div id="data_table">
+            <div id="inspections"></div>
+            <div id="harvests"></div>
+        </div>
+    </div>
 </div>
 
 <script src="js/hive.js" type="text/javascript"></script>
