--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -6,6 +6,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <script type="text/javascript" src="js/l10n.js"></script>
     <script type="text/javascript" src="js/localizations.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
