--- a/nodeServer/static/harvest.html
+++ b/nodeServer/static/harvest.html
@@ -15,7 +15,13 @@
 <body>
 <div class="container">
     <div id="header">
-        <h1 id="title">Force Bee w/ U</h1>
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Force Bee w/ U</a>
+                </div>
+            </div>
+        </nav>
     </div>
 
     <div id="main">
