--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>Dashboard - Map</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <!-- Bootstrap -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -23,7 +23,16 @@
     <![endif]-->
   </head>
   <body>
-    
+
+    <div id="header">
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">Force Bee w/ U</a>
+          </div>
+        </div>
+      </nav>
+    </div>
 
     <div class="container" width="100%" height= "100%">
       <div id="mapDiv"></div>
