--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" type="text/css" href="http://esri.github.io/bootstrap-map-js/src/css/bootstrapmap.css">   
     <style type="text/css">
       #mapDiv {
-        max-height: 100%; 
-        width: auto; 
+        padding: 10px;
+      }
+      nav {
+        margin: 0;
+        padding: 0;
       }
     </style>
 
@@ -54,8 +57,8 @@
             // Get a reference to the ArcGIS Map class
             var map = BootstrapMap.create("mapDiv",{
               basemap:"dark-gray",
-              center:[-122.45,37.77],
-              zoom:12
+              center:[35.14, -6.10],
+              zoom:6
             });
         });
     </script>
