--- a/nodeServer/static/user.html
+++ b/nodeServer/static/user.html
@@ -10,7 +10,14 @@
     <script type="text/javascript" src="js/l10n.js"></script>
     <script type="text/javascript" src="js/localizations.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/npm.js"></script>
+    <script type="text/javascript" src="js/npm.js"></script>        <script src="js/skel.min.js"></script>
+        <script src="js/skel-panels.min.js"></script>
+        <script src="js/init.js"></script>
+        <noscript>
+            <link rel="stylesheet" href="css/skel-noscript.css" />
+            <link rel="stylesheet" href="css/style.css" />
+            <link rel="stylesheet" href="css/style-desktop.css" />
+        </noscript>
 </head>
 <body>
     <div class="container">
