--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -2,34 +2,19 @@
 <html>
   <head>
     <title>Dashboard - Map</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!-- Bootstrap -->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script type="text/javascript" src="js/l10n.js"></script>
+    <script type="text/javascript" src="js/localizations.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/npm.js"></script>
 
-    <!-- Step 1. Add CSS for the mapping components -->
-    <link rel="stylesheet" type="text/css" href="//js.arcgis.com/3.13/esri/css/esri.css">   
-    <link rel="stylesheet" type="text/css" href="http://esri.github.io/bootstrap-map-js/src/css/bootstrapmap.css">   
     <style type="text/css">
-      #mapDiv {
-        padding: 10px;
-      }
-      nav {
-        margin: 0;
-        padding: 0;
-      }
+      html, body { height: 100%; margin: 0; padding: 0; }
+      #map { height: 90%; }
     </style>
-
-    <!-- HTML5 IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-      <script src="../assets/js/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- jQuery (for Bootstrap's JavaScript plugins) -->
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <!-- Include all  plugins or individual files as needed -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="//js.arcgis.com/3.13compact"></script>
   </head>
   <body>
 
@@ -43,23 +28,51 @@
       </nav>
     </div>
 
-    <div class="container" width="100%" height= "100%">
-      <div id="mapDiv"></div>
-    </div>
+    <div id="map"></div>
+    <script type="text/javascript">
 
-    <script>
-      var package_path = "//esri.github.com/bootstrap-map-js/src/js";
-      var dojoConfig = {
-        packages: [{
-          name: "application",
-          location: package_path
-        }]
-      };
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -6.10, lng: 35.10},
+          zoom: 6
+        });
+
+        var markers = [];
+
+        $.get("http://fbwu.rob4001.co.uk/api/map",
+                function(data) {
+                    data.forEach(function(element) {
+                      var myLatLng = {lat: element.LAT, lng: element.LNG};
+                      if (element.OBJTYPE == "HiveView") {
+                        var colour = "blue";
+                        var href = "http://www.fbwu.rob4001.co.uk/hive.html?id=" + element.ID;
+                      } else {
+                        var colour = "red";
+                        var href = "http://www.fbwu.rob4001.co.uk/apiary.html?id=" + element.ID;
+                      }
+                      var marker = new google.maps.Marker({
+                        map: map,
+                        position: myLatLng,
+                        title: 'Hello World!',
+                        colour: colour,
+                        url: href
+                      });
+                      markers.push(marker);
+                    });
+                }
+        );
+
+        // Create a marker and set its position.
+
+      }
+
+
+
     </script>
-
-    <script type="text/javascript" src="js/map.js"></script>
-
-
-  </body>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD36tJba4NynYlOONKEH9oQdG-ociRRgWQ&callback=initMap">
+    </script>
+    </body>
 </html>
              
