--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -38,7 +38,9 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script src="//js.arcgis.com/3.13compact"></script>
   </head>
-  <body>
+  <body class="homepage">
+
+    <div id="wrapper">
 
     <div id="header">
       <nav class="navbar navbar-inverse">
@@ -63,7 +65,7 @@
         }]
       };
     </script>
-
+</div>
     <script type="text/javascript" src="js/map.js"></script>
 
 
