--- a/nodeServer/static/harvest.html
+++ b/nodeServer/static/harvest.html
@@ -20,7 +20,9 @@
             <link rel="stylesheet" href="css/style-desktop.css" />
         </noscript>
 </head>
-<body>
+    <body class="homepage">
+
+        <div id="wrapper">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -38,6 +40,6 @@
 </div>
 
 <script src="js/harvest.js" type="text/javascript"></script>
-
+</div>
 </body>
 </html>
