--- a/nodeServer/static/hive.html
+++ b/nodeServer/static/hive.html
@@ -20,7 +20,9 @@
             <link rel="stylesheet" href="css/style-desktop.css" />
         </noscript>
 </head>
-<body>
+    <body class="homepage">
+
+        <div id="wrapper">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -42,6 +44,6 @@
 </div>
 
 <script src="js/hive.js" type="text/javascript"></script>
-
+</div>
 </body>
 </html>
