--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -20,7 +20,9 @@
             <link rel="stylesheet" href="css/style-desktop.css" />
         </noscript>
 </head>
-<body>
+    <body class="homepage">
+
+        <div id="wrapper">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -38,7 +40,7 @@
         <button id="login" type="button" class="btn btn-primary">Login</button>
     </div>
 </div>
-
+</div>
     <script src="js/index.js" type="text/javascript"></script>
 </body>
 </html>
