--- a/nodeServer/static/inspection.html
+++ b/nodeServer/static/inspection.html
@@ -20,7 +20,9 @@
             <link rel="stylesheet" href="css/style-desktop.css" />
         </noscript>
 </head>
-<body>
+    <body class="homepage">
+
+        <div id="wrapper">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -39,6 +41,6 @@
 </div>
 
 <script type="text/javascript" src="js/inspection.js"></script>
-
+</div>
 </body>
 </html>
