--- a/nodeServer/static/login.html
+++ b/nodeServer/static/login.html
@@ -21,8 +21,9 @@
       <link rel="stylesheet" href="css/style-desktop.css" />
     </noscript>
 </head>
+  <body class="homepage">
 
-<body>
+    <div id="wrapper">
   <div class="container">
     <div id="header">
       <nav class="navbar navbar-inverse">
@@ -52,7 +53,7 @@
       </form>
     </div>
   </div>
-
+</div>
   <script src="js/index.js" type="text/javascript"></script>
 </body>
 
