--- a/nodeServer/static/user.html
+++ b/nodeServer/static/user.html
@@ -19,7 +19,9 @@
             <link rel="stylesheet" href="css/style-desktop.css" />
         </noscript>
 </head>
-<body>
+    <body class="homepage">
+
+        <div id="wrapper">
     <div class="container">
         <div id="header">
             <nav class="navbar navbar-inverse">
@@ -36,7 +38,7 @@
             <div id="data_table"></div>
         </div>
     </div>
-
+</div>
     <script type="text/javascript" src="js/user.js"></script>
 </body>
 </html>
