--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -10,6 +10,10 @@
     <script type="text/javascript" src="js/localizations.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/npm.js"></script>
+      <style type="text/css">
+          html, body { height: 100%; margin: 0; padding: 0; }
+          #map { height: 100%; }
+      </style>
   </head>
   <body>
 
