--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -11,7 +11,9 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/npm.js"></script>
   </head>
-  <body>
+    <body class="homepage">
+
+        <div id="wrapper">
 
     <div id="header">
       <nav class="navbar navbar-inverse">
@@ -62,7 +64,7 @@
 
 
 
-    </script>
+    </script></div>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD36tJba4NynYlOONKEH9oQdG-ociRRgWQ&callback=initMap">
     </script>
