--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -22,7 +22,8 @@
 </head>
     <body class="homepage">
 
-        <div id="wrapper">
+        <div id="wrapper"><div class="container">
+                <div id="main">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -39,7 +40,8 @@
         <div id="data_table"></div>
     </div>
 </div>
-
+</div>
+</div>
     <script src="js/apiary.js" type="text/javascript"></script>
 </div>
 </body>
