--- a/nodeServer/static/harvest.html
+++ b/nodeServer/static/harvest.html
@@ -22,7 +22,8 @@
 </head>
     <body class="homepage">
 
-        <div id="wrapper">
+        <div id="wrapper"><div class="container">
+                <div id="main">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -38,7 +39,8 @@
         <div id="info_table"></div>
     </div>
 </div>
-
+</div>
+</div>
 <script src="js/harvest.js" type="text/javascript"></script>
 </div>
 </body>
