--- a/nodeServer/static/hive.html
+++ b/nodeServer/static/hive.html
@@ -22,7 +22,8 @@
 </head>
     <body class="homepage">
 
-        <div id="wrapper">
+        <div id="wrapper"><div class="container">
+                <div id="main">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -42,7 +43,8 @@
         </div>
     </div>
 </div>
-
+</div>
+</div>
 <script src="js/hive.js" type="text/javascript"></script>
 </div>
 </body>
