--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -22,7 +22,8 @@
 </head>
     <body class="homepage">
 
-        <div id="wrapper">
+        <div id="wrapper"><div class="container">
+                <div id="main">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -40,6 +41,7 @@
         <button id="login" type="button" class="btn btn-primary">Login</button>
     </div>
 </div>
+</div></div>
 </div>
     <script src="js/index.js" type="text/javascript"></script>
 </body>
