--- a/nodeServer/static/login.html
+++ b/nodeServer/static/login.html
@@ -24,6 +24,8 @@
   <body class="homepage">
 
     <div id="wrapper">
+    <div class="container">
+        <div id="main">
   <div class="container">
     <div id="header">
       <nav class="navbar navbar-inverse">
@@ -53,6 +55,7 @@
       </form>
     </div>
   </div>
+</div></div>
 </div>
   <script src="js/index.js" type="text/javascript"></script>
 </body>
