--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -14,7 +14,8 @@
     <body class="homepage">
 
         <div id="wrapper">
-
+<div class="container">
+        <div id="main">
     <div id="header">
       <nav class="navbar navbar-inverse">
         <div class="container-fluid">
@@ -64,7 +65,8 @@
 
 
 
-    </script></div>
+    </script></div></div>
+</div>
     <script async defer
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD36tJba4NynYlOONKEH9oQdG-ociRRgWQ&callback=initMap">
     </script>
