--- a/nodeServer/static/user.html
+++ b/nodeServer/static/user.html
@@ -23,6 +23,8 @@
 
         <div id="wrapper">
     <div class="container">
+        <div id="main">
+    <div class="container">
         <div id="header">
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
@@ -38,6 +40,7 @@
             <div id="data_table"></div>
         </div>
     </div>
+</div></div>
 </div>
     <script type="text/javascript" src="js/user.js"></script>
 </body>
