--- a/nodeServer/static/harvest.html
+++ b/nodeServer/static/harvest.html
@@ -22,8 +22,7 @@
 </head>
     <body class="homepage">
 
-       
-                <div id="main">
+        <div id="wrapper">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
