--- a/nodeServer/static/user.html
+++ b/nodeServer/static/user.html
@@ -21,8 +21,7 @@
 </head>
     <body class="homepage">
 
-       
-        <div id="main">
+        <div id="wrapper">
     <div class="container">
         <div id="header">
             <nav class="navbar navbar-inverse">
@@ -39,7 +38,6 @@
             <div id="data_table"></div>
         </div>
     </div>
-
 </div>
     <script type="text/javascript" src="js/user.js"></script>
 </body>
