--- a/nodeServer/static/apiary.html
+++ b/nodeServer/static/apiary.html
@@ -22,8 +22,7 @@
 </head>
     <body class="homepage">
 
-       
-                <div id="main">
+        <div id="wrapper">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -40,8 +39,7 @@
         <div id="data_table"></div>
     </div>
 </div>
-</div>
-</div>
+
     <script src="js/apiary.js" type="text/javascript"></script>
 </div>
 </body>
