--- a/nodeServer/static/index.html
+++ b/nodeServer/static/index.html
@@ -22,8 +22,7 @@
 </head>
     <body class="homepage">
 
-       
-                <div id="main">
+        <div id="wrapper">
 <div class="container">
     <div id="header">
         <nav class="navbar navbar-inverse">
@@ -41,7 +40,6 @@
         <button id="login" type="button" class="btn btn-primary">Login</button>
     </div>
 </div>
-
 </div>
     <script src="js/index.js" type="text/javascript"></script>
 </body>
