--- a/nodeServer/static/login.html
+++ b/nodeServer/static/login.html
@@ -23,8 +23,7 @@
 </head>
   <body class="homepage">
 
-   
-        <div id="main">
+    <div id="wrapper">
   <div class="container">
     <div id="header">
       <nav class="navbar navbar-inverse">
@@ -52,8 +51,8 @@
           <input type="submit" value="Log In" />
         </div>
       </form>
-
-</div></div>
+    </div>
+  </div>
 </div>
   <script src="js/index.js" type="text/javascript"></script>
 </body>
