--- a/nodeServer/static/harvest.html
+++ b/nodeServer/static/harvest.html
@@ -29,6 +29,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">Force Bee w/ U</a>
+                    <div style="float: right; position: absolute;   right: 0;   padding: 15px;   font-size: 15px;"><a href="../map.html">Map</a></div>
                 </div>
             </div>
         </nav>
