--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -59,13 +59,14 @@
                       var marker = new google.maps.Marker({
                         map: map,
                         position: myLatLng,
-                        title: 'Hello World!',
+                        title: element.OBJTYPE + " " + element.ID,
                         colour: colour,
-                        url: href
+                        url: "google.co.uk"
                       });
                       markers.push(marker);
                     });
                 }
+
         );
 
       }
