--- a/nodeServer/static/map.html
+++ b/nodeServer/static/map.html
@@ -51,10 +51,10 @@
                       var myLatLng = new google.maps.LatLng(element.LAT, element.LNG);
                       if (element.OBJTYPE == "HiveView") {
                         var colour = "blue";
-                        var href = "http://www.fbwu.rob4001.co.uk/hive.html?id=" + element.ID;
+                        var href = "http://fbwu.rob4001.co.uk/hive.html?id=" + element.ID;
                       } else {
                         var colour = "red";
-                        var href = "http://www.fbwu.rob4001.co.uk/apiary.html?id=" + element.ID;
+                        var href = "http://fbwu.rob4001.co.uk/apiary.html?id=" + element.ID;
                       }
                       var marker = new google.maps.Marker({
                         map: map,
